--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="wtiau_blog">
+  <meta name="apple-mobile-web-app-title" content="time_film">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>wtiau_blog</title>
+  <title>time_film</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
